--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
 
-  get: any
-  iconsax: any
+  get: 4.6.6
+  iconsax: 0.0.8
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
